--- a/Guide.ipynb
+++ b/Guide.ipynb
@@ -53,7 +53,7 @@
     "       - Save your changes.\n",
     "   \n",
     "   - Option 2:\n",
-    "      - Use builtin functions as showed below."
+    "      - Use built-in functions as shown below."
    ]
   },
   {
