--- a/Guide.ipynb
+++ b/Guide.ipynb
@@ -7,7 +7,7 @@
     "### <u>**Tutorial**</u>\n",
     "---\n",
     "\n",
-    "1. **Access Yahoo Finance Screener**  \n",
+    "1. **Access Yahoo Finance Screener**  \n\n",
     "   - Go to the [Yahoo Finance Screener](https://finance.yahoo.com/research-hub/screener/most_actives/).\n",
     "\n",
     "2. **Open Developer Tools**  \n",
