--- a/Guide.ipynb
+++ b/Guide.ipynb
@@ -7,8 +7,8 @@
     "### <u>**Tutorial**</u>\n",
     "---\n",
     "\n",
-    "1. **Access Yahoo Finance Screener**  \n\n",
-    "   - Go to the [Yahoo Finance Screener](https://finance.yahoo.com/research-hub/screener/most_actives/).\n",
+    "1. **Access Yahoo Finance Screener**  \n",
+    "   - Go to the [Yahoo Finance Screener](https://finance.yahoo.com/research-hub/screener/most_actives/).\n\n",
     "\n",
     "2. **Open Developer Tools**  \n",
     "   - Right-click on the webpage and select **Inspect** to launch your browser’s developer tools.\n",
