--- a/Guide.ipynb
+++ b/Guide.ipynb
@@ -6231,7 +6231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, if you're only looking for ITM calls expiring on the third Friday of the month:"
+    "For example, if you're only looking for ATM calls expiring on the third Friday of the month:"
    ]
   },
   {
